refactor: improved exceptions.